# cuda-quantum

./: .gitignore
.devcontainer/: .devcontainer.json.swp  devcontainer.json
lib/: CMakeLists.txt
lib/Plugins/: CMakeLists.txt
lib/Plugins/MyCustomPlugin/: CMakeLists.txt  MyCustomPlugin.cpp
runtime/common/: BaseRemoteRESTQPU.h  CMakeLists.txt  ConnectionHandler.h  Executor.cpp  Executor.h  Future.cpp  QuantumTask.h  RabbitMQClient.cpp  RabbitMQClient.h  RuntimeMLIR.cpp  RuntimeMLIRCommonImpl.h
runtime/cudaq/: mqss-mqp.h
runtime/cudaq/builder/: kernel_builder.h
runtime/cudaq/platform/default/: DefaultQuantumPlatform.cpp
runtime/cudaq/platform/default/rest/helpers/: CMakeLists.txt
runtime/cudaq/platform/default/rest/helpers/mqss/: CMakeLists.txt  MQSSServerHelper.cpp  mqss.config  mqss.yml
runtime/cudaq/platform/default/rest/helpers/mqss-hpc/: CMakeLists.txt  MQSS-HPC.cpp  mqssHPC.yml
runtime/cudaq/platform/default/rest/helpers/mqss-mqp/: CMakeLists.txt  MQSS-MQP-ServerHelper.cpp  MQSSJobStatus.h  MQSSMQPServerHelper.cpp  mqssMQP.yml
runtime/cudaq/platform/mqss-mqp/: CMakeLists.txt  MQSS-MQP-Platform.cpp  mqss_mqp_platform.h
scripts/: build_cudaq.sh  build_llvm.sh
unittests/: CMakeLists.txt
unittests/backends/: CMakeLists.txt
unittests/backends/mqss/: CMakeLists.txt  MQSSTester.cpp  crow-REST-server.cpp
unittests/backends/mqssHPC/: CMakeLists.txt  CXX-MQSS-HPC-StartServerAndTest.sh.in  MQSS-HPC-StartServerAndTest.sh.in  MQSS-HPC-Tester.cpp  RabbitMQ-Consumer.cpp  RabbitMQServer.cpp  RabbitMQServer.hpp  SimulateKernelLoweredToLLVM.py.in
unittests/backends/mqssMQP/: CMakeLists.txt  MQSS-MQP-StartServerAndTest.sh.in  MQSS-MQP-Tester.cpp  SimulateKernelLoweredToLLVM.py.in  crow-REST-server.cpp
utils/mock_qpu/mqss/: __init__.py
